Code refactor
- Import reorder
- Use Record accessor methods instead of direct private field access
- Remove unnecessary paranthesis and local variables
- Move local variables closer to their usage point
- Refactor long if else if in tps average logic into a method and custom record
- Ensure thread safety more strictly in tps calculator
- Optimize isGlowing, there is no need to check instanceof each time - only check once after instance creation.
- Add MathUtils#isNearEqual and use it to avoid very big number of tree gifts per hour average due to wrapping