@@ -10,36 +10,38 @@ import org.jetbrains.annotations.Nullable;
 import java.util.concurrent.Executors;
 import java.util.concurrent.ScheduledExecutorService;
 import java.util.concurrent.TimeUnit;
+import java.util.concurrent.atomic.AtomicBoolean;
 import java.util.concurrent.atomic.AtomicInteger;
 import java.util.concurrent.atomic.AtomicReference;
 import java.util.function.IntConsumer;
 
 public final class ServerTPSCalculator {
     private static final @NotNull AtomicInteger tickCount = new AtomicInteger();
-    private static final @NotNull ScheduledExecutorService calculatorThread = Executors.newSingleThreadScheduledExecutor((@NotNull final Runnable r) -> new Thread(r, "DarkUtils Server TPS Calculator Thread"));
-    private static volatile boolean initialized;
-    private static volatile int lastTPS;
-    private static volatile boolean enableTPSCalculationTemporarily;
+    private static final @NotNull ScheduledExecutorService calculatorThread =
+            Executors.newSingleThreadScheduledExecutor(r -> Thread.ofPlatform()
+                    .name("DarkUtils Server TPS Calculator Thread")
+                    .unstarted(r));
+    private static final @NotNull AtomicBoolean initialized = new AtomicBoolean();
+    private static final @NotNull AtomicInteger lastTPS = new AtomicInteger();
+    private static final @NotNull AtomicBoolean enableTPSCalculationTemporarily = new AtomicBoolean();
     private static final @NotNull AtomicReference<@Nullable IntConsumer> hook = new AtomicReference<>();
 
     static {
         ServerTPSCalculator.calculatorThread.scheduleWithFixedDelay(() -> {
             if (ServerTPSCalculator.shouldCalculate()) {
                 final var ticksThisSecond = ServerTPSCalculator.tickCount.getAndSet(0);
-                ServerTPSCalculator.lastTPS = Math.min(20, ticksThisSecond);
+                ServerTPSCalculator.lastTPS.getAndSet(Math.min(20, ticksThisSecond));
 
-                if (!ServerTPSCalculator.initialized && 0 < ticksThisSecond) {
-                    ServerTPSCalculator.initialized = true;
+                if (!ServerTPSCalculator.initialized.get() && 0 < ticksThisSecond) {
+                    ServerTPSCalculator.initialized.getAndSet(true);
                 }
 
-                if (ServerTPSCalculator.initialized) {
+                if (ServerTPSCalculator.initialized.get()) {
                     final var hookRef = ServerTPSCalculator.hook;
                     final var hook = hookRef.get();
                     if (null != hook) {
-                        final var value = ServerTPSCalculator.lastTPS;
-
                         // Run the hook inside client thread for thread safety.
-                        TickUtils.queueTickTask(() -> hook.accept(value), 1);
+                        TickUtils.queueTickTask(() -> hook.accept(ServerTPSCalculator.lastTPS.get()), 1);
                     }
                 }
             }
@@ -62,13 +64,13 @@ public final class ServerTPSCalculator {
      * Returns -1 if not measured yet.
      */
     public static final int getLastTPS() {
-        return ServerTPSCalculator.initialized ? ServerTPSCalculator.lastTPS : -1;
+        return ServerTPSCalculator.initialized.get() ? ServerTPSCalculator.lastTPS.get() : -1;
     }
 
     private static final void onWorldUnload() {
         if (ServerTPSCalculator.shouldCalculate()) {
-            ServerTPSCalculator.initialized = false;
-            ServerTPSCalculator.lastTPS = 0;
+            ServerTPSCalculator.initialized.getAndSet(false);
+            ServerTPSCalculator.lastTPS.getAndSet(0);
             ServerTPSCalculator.tickCount.set(0);
         }
     }
@@ -80,16 +82,16 @@ public final class ServerTPSCalculator {
     }
 
     static final void startCalculatingTPS(@NotNull final IntConsumer hook) {
-        ServerTPSCalculator.enableTPSCalculationTemporarily = true;
+        ServerTPSCalculator.enableTPSCalculationTemporarily.getAndSet(true);
         ServerTPSCalculator.hook.updateAndGet(h -> hook);
     }
 
     static final void stopCalculatingTPS() {
-        ServerTPSCalculator.enableTPSCalculationTemporarily = false;
+        ServerTPSCalculator.enableTPSCalculationTemporarily.getAndSet(false);
         ServerTPSCalculator.hook.updateAndGet(h -> null);
     }
 
     private static final boolean shouldCalculate() {
-        return ServerTPSCalculator.enableTPSCalculationTemporarily;
+        return ServerTPSCalculator.enableTPSCalculationTemporarily.get();
     }
 }
